# openmw-cn-android

./: .gitattributes  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  copy_resources.bat  readme-zh_CN-Android.md  readme-zh_CN.txt
.github/workflows/: push.yml
CI/: before_script.msvc.sh
apps/launcher/: datafilespage.cpp  graphicspage.cpp  importpage.cpp  maindialog.cpp  settingspage.cpp
apps/openmw/: CMakeLists.txt  android_main.cpp  engine.cpp  main.cpp  options.cpp
apps/wizard/: componentselectionpage.cpp  conclusionpage.cpp  existinginstallationpage.cpp  installationtargetpage.cpp  languageselectionpage.cpp  mainwizard.cpp
components/: CMakeLists.txt
components/Encoding/: CMakeLists.txt  encoding.cpp
components/Encoding/include/: encoding.h
components/compiler/: scanner.hpp
components/crashcatcher/: windows_crashmonitor.cpp
components/debug/: debugging.cpp  debuglog.cpp  debuglog.hpp
components/esm3/: loadscpt.cpp
components/fontloader/: fontloader.cpp
components/lua/: l10n.cpp
components/myguiplatform/: myguitexture.cpp
components/nif/: niftypes.hpp
components/nifosg/: controller.cpp  controller.hpp  matrixtransform.cpp  matrixtransform.hpp
components/resource/: animblendrulesmanager.cpp  animblendrulesmanager.hpp  resourcesystem.cpp  resourcesystem.hpp  stats.cpp
files/: openmw_reset.cfg  reset_cfg.bat  settings-default.cfg  settings_reset.cfg
scripts/: Morrowind.cel  MyGUI.patch  check_topic.lua  copy_resources.bat  openmw_in_Documents.cfg  tes3dec.lua  tes3enc.lua  test_tes3encdec.bat  topics.txt
(+140 files in other folders)
